--- a/settings.gradle
+++ b/settings.gradle
@@ -4,3 +4,6 @@ rootProject.name = 'com.dx168.fastdex'
 include ':gradle-plugin'
 include ':build-lib'
 include ':runtime'
+include ':instant-run:instant-run-common'
+include ':instant-run:instant-run-client'
+include ':instant-run:instant-run-server'
