--- a/sample/app/build.gradle
+++ b/sample/app/build.gradle
@@ -19,7 +19,7 @@ fastdex {
     //default 4
     //当变化的java文件数量大于等于这个值时触发dex merge(随着变化的java文件的增多,补丁打包会越来越慢,dex merge以后当前的状态相当于全量打包以后的状态)
     //如果依赖的library工程比较多建议设置稍微大一些
-    dexMergeThreshold = 6
+    dexMergeThreshold = 2
 }
 
 android {
@@ -112,27 +112,27 @@ dependencies {
 
 
     compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
-//    compile 'org.xutils:xutils:3.3.36'
-//    compile 'de.hdodenhof:circleimageview:2.0.0'
-//    compile 'de.hdodenhof:circleimageview:2.0.0'
-//    compile 'com.squareup.retrofit:retrofit:1.9.0'
-//    compile 'info.hoang8f:android-segmented:1.0.6'
-//    compile 'com.squareup.okio:okio:1.0.1'
-//    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
-//    compile 'com.zhy:okhttputils:2.4.1'
-//    compile 'joda-time:joda-time:2.6'
-//    compile 'com.squareup.retrofit:retrofit:1.8.0'
-//    compile 'com.squareup.okhttp:okhttp:2.2.0'
-//    compile 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
-//    compile "org.greenrobot:eventbus:3.0.0"
-//    compile "org.glassfish:javax.annotation:10.0-b28"
-//    compile "com.commit451:PhotoView:1.2.4"
-//    compile "com.evernote:android-sdk:2.0.0-RC3"
-//    compile 'com.android.volley:volley:1.0.0'
-//    compile 'com.dialonce:dialonce-android:2.3.1'
-//    compile 'com.facebook.fresco:fresco:1.1.0'
-//    compile 'com.google.guava:guava:18.0'
-//    compile 'com.android.support:design:23.4.0'
+    compile 'org.xutils:xutils:3.3.36'
+    compile 'de.hdodenhof:circleimageview:2.0.0'
+    compile 'de.hdodenhof:circleimageview:2.0.0'
+    compile 'com.squareup.retrofit:retrofit:1.9.0'
+    compile 'info.hoang8f:android-segmented:1.0.6'
+    compile 'com.squareup.okio:okio:1.0.1'
+    compile 'com.nostra13.universalimageloader:universal-image-loader:1.9.3'
+    compile 'com.zhy:okhttputils:2.4.1'
+    compile 'joda-time:joda-time:2.6'
+    compile 'com.squareup.retrofit:retrofit:1.8.0'
+    compile 'com.squareup.okhttp:okhttp:2.2.0'
+    compile 'com.squareup.okhttp:okhttp-urlconnection:2.2.0'
+    compile "org.greenrobot:eventbus:3.0.0"
+    compile "org.glassfish:javax.annotation:10.0-b28"
+    compile "com.commit451:PhotoView:1.2.4"
+    compile "com.evernote:android-sdk:2.0.0-RC3"
+    compile 'com.android.volley:volley:1.0.0'
+    compile 'com.dialonce:dialonce-android:2.3.1'
+    compile 'com.facebook.fresco:fresco:1.1.0'
+    compile 'com.google.guava:guava:18.0'
+    compile 'com.android.support:design:23.4.0'
 
     debugCompile 'com.squareup.leakcanary:leakcanary-android:1.4-beta2'
     releaseCompile 'com.squareup.leakcanary:leakcanary-android-no-op:1.4-beta2'
