--- a/gradle-plugin/build.gradle
+++ b/gradle-plugin/build.gradle
@@ -6,6 +6,8 @@ dependencies {
     compile localGroovy()
     compile project(':build-lib')
     compile 'com.android.tools.build:gradle:2.1.2'
+
+    compile project(':instant-run:instant-run-client')
 }
 
 repositories {
