--- a/instant-run/instant-run-common/build.gradle
+++ b/instant-run/instant-run-common/build.gradle
@@ -15,6 +15,7 @@
  */
 
 apply plugin: 'java'
+apply plugin: 'maven'
 
 sourceCompatibility = JavaVersion.VERSION_1_6
 targetCompatibility = JavaVersion.VERSION_1_6
@@ -23,3 +24,5 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile group: 'com.google.guava', name: 'guava', version: '18.0'
 }
+
+apply from: rootProject.file('bintray.gradle')
