--- a/settings.gradle
+++ b/settings.gradle
@@ -7,3 +7,4 @@ include ':runtime'
 include ':instant-run:instant-run-common'
 include ':instant-run:instant-run-client'
 include ':instant-run:instant-run-server'
+include ':app'
