--- a/settings.gradle
+++ b/settings.gradle
@@ -1,11 +1,8 @@
-//include ':app'
-rootProject.name = 'com.dx168.fastdex'
+//rootProject.name = 'com.github.typ0520'
 
-include ':common'
+include ':fastdex-common'
 include ':gradle-plugin'
 include ':build-lib'
 include ':runtime'
-include ':instant-run:instant-run-common'
-include ':instant-run:instant-run-client'
-include ':instant-run:instant-run-server'
 include ':app'
+include ':ddmlib'
