--- a/app/build.gradle
+++ b/app/build.gradle
@@ -52,5 +52,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
-    compile project(':instant-run:instant-run-server')
+    compile project(':runtime')
 }
