--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
     package="com.dx168.fastdex.sample">
 
     <application
-        android:name=".SampleApplication"
+        android:name="fastdex.runtime.FastdexApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -18,6 +18,8 @@
         </activity>
 
         <activity android:name=".MainActivity2"></activity>
+
+        <meta-data android:name="FASTDEX_ORIGIN_APPLICATION_CLASSNAME" android:value="com.dx168.fastdex.sample.SampleApplication"/>
     </application>
 
 </manifest>
