--- a/bintray.gradle
+++ b/bintray.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.jfrog.bintray'
 apply plugin: 'maven-publish'
 
-def projectName = project.name
+def projectName = project.hasProperty("MAVEN_ARTIFACT_ID") ? project.MAVEN_ARTIFACT_ID : project.name
 def mavenDesc = projectName
 def baseUrl = 'https://github.com/typ0520/fastdex'
 def siteUrl = baseUrl
@@ -86,7 +86,7 @@ bintray {
     configurations = ['archives']
     pkg {
         repo = 'maven'
-        name = "${project.group}:${projectName}"
+        name = "${project.groupId}:${projectName}"
         desc = mavenDesc
         websiteUrl = siteUrl
         issueTrackerUrl = issueUrl
