--- a/build-lib/build.gradle
+++ b/build-lib/build.gradle
@@ -8,9 +8,9 @@ targetCompatibility = 1.7
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile project(':common')
+    compile project(':fastdex-common')
     compile 'com.google.code.gson:gson:2.3.1'
-    compile 'com.google.guava:guava:11.0.2'
+//    compile 'com.google.guava:guava:11.0.2'
     compile 'org.apache.ant:ant:1.8.2'
 
     testCompile 'junit:junit:4.12'
