--- a/runtime/build.gradle
+++ b/runtime/build.gradle
@@ -21,8 +21,7 @@ android {
 }
 
 dependencies {
-    compile project(':common')
-    compile project(':instant-run:instant-run-server')
+    compile project(':fastdex-common')
 }
 
 //如果runtime代码有变化,生成fastdex-runtime.dex放进buildSrc/src/main/resources/fastdex-runtime.dex
