--- a/build-lib/build.gradle
+++ b/build-lib/build.gradle
@@ -9,6 +9,8 @@ targetCompatibility = 1.7
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile project(':fastdex-common')
+    compile project(':ddmlib')
+
     compile 'com.google.code.gson:gson:2.3.1'
 //    compile 'com.google.guava:guava:11.0.2'
     compile 'org.apache.ant:ant:1.8.2'
