--- a/ddmlib/build.gradle
+++ b/ddmlib/build.gradle
@@ -8,21 +8,15 @@ targetCompatibility = 1.7
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.google.code.gson:gson:2.3.1'
-    compile 'com.google.guava:guava:18.0'
-
-    testCompile 'junit:junit:4.12'
-    testCompile 'com.google.code.gson:gson:2.3.1'
 }
 
 apply from: rootProject.file('bintray.gradle')
 
-
 tasks['install'].doLast {
     project.copy {
-        from project.file("/Users/tong/Projects/fastdex/build-lib/libs/ddmlib.jar")
-        into project.file("/Users/tong/Projects/fastdex/ddmlib/build/libs")
+        from project.file("libs/ddmlib.jar")
+        into project.file("build/libs")
     }
 
-    new File("/Users/tong/Projects/fastdex/ddmlib/build/libs/ddmlib.jar").renameTo(new File("/Users/tong/Projects/fastdex/ddmlib/build/libs/ddmlib-1.0.0.jar"))
+    project.file("build/libs/ddmlib.jar").renameTo(project.file("build/libs/ddmlib-${project.version}.jar"))
 }
