--- a/runtime/build.gradle
+++ b/runtime/build.gradle
@@ -1,3 +1,11 @@
+import com.android.build.gradle.internal.transforms.JarMerger
+import groovy.io.FileVisitResult
+import org.apache.tools.ant.taskdefs.condition.Os
+import java.lang.reflect.InvocationHandler
+import java.lang.reflect.Method
+import java.lang.reflect.Proxy
+import java.util.zip.ZipEntry
+
 apply plugin: 'com.android.library'
 
 android {
@@ -28,12 +36,18 @@ dependencies {
 project.afterEvaluate {
     android.libraryVariants.all { variant ->
         def variantName = variant.name.capitalize()
+        if (!"Release".equals(variantName)) {
+            return
+        }
         Task generateDexTask = project.tasks.create("generateRuntimeDexFor${variantName}")
         generateDexTask.group = 'fastdex'
-        generateDexTask.doFirst {
+        generateDexTask.dependsOn variant.javaCompile
+        generateDexTask.doLast {
+            File inputDirectory = project.file("build/intermediates/classes/release")
+            new File(inputDirectory,"com").deleteDir()
             project.copy {
-                from project.zipTree(project.file("build/outputs/aar/${project.name}-${variantName}.aar"))
-                into project.file("build/intermediates/fastdex/${variantName}")
+                from project.rootProject.file("fastdex-common/build/classes/main/fastdex")
+                into project.file("build/intermediates/classes/release/fastdex")
             }
 
             String sdkDirectory = project.android.getSdkDirectory()
@@ -47,8 +61,9 @@ project.afterEvaluate {
                 dxcmd =  "${dxcmd}.bat"
             }
             project.file("build/outputs/fastdex/${variantName.toLowerCase()}").mkdirs()
-            dxcmd = "${dxcmd} --dex --output=${project.file("build/outputs/fastdex/${variantName.toLowerCase()}/fastdex-runtime.dex")} ${project.file("build/intermediates/fastdex/${variantName}/classes.jar")}"
+            dxcmd = "${dxcmd} --dex --output=${project.file("build/outputs/fastdex/${variantName.toLowerCase()}/fastdex-runtime.dex")} ${inputDirectory}"
 
+            println("==dxcmd: \n${dxcmd}")
             def process = dxcmd.execute()
             int status = process.waitFor()
             process.destroy()
@@ -56,6 +71,5 @@ project.afterEvaluate {
                 throw new GradleException("generate fastdex runtime dex fail!")
             }
         }
-        generateDexTask.dependsOn variant.assemble
     }
 }
