--- a/runtime/build.gradle
+++ b/runtime/build.gradle
@@ -1,11 +1,3 @@
-import com.android.build.gradle.internal.transforms.JarMerger
-import groovy.io.FileVisitResult
-import org.apache.tools.ant.taskdefs.condition.Os
-import java.lang.reflect.InvocationHandler
-import java.lang.reflect.Method
-import java.lang.reflect.Proxy
-import java.util.zip.ZipEntry
-
 apply plugin: 'com.android.library'
 
 android {
@@ -61,7 +53,8 @@ project.afterEvaluate {
                 dxcmd =  "${dxcmd}.bat"
             }
             project.file("build/outputs/fastdex/${variantName.toLowerCase()}").mkdirs()
-            dxcmd = "${dxcmd} --dex --output=${project.file("build/outputs/fastdex/${variantName.toLowerCase()}/fastdex-runtime.dex")} ${inputDirectory}"
+            File outDex = project.file("build/outputs/fastdex/${variantName.toLowerCase()}/fastdex-runtime.dex")
+            dxcmd = "${dxcmd} --dex --output=${outDex} ${inputDirectory}"
 
             println("==dxcmd: \n${dxcmd}")
             def process = dxcmd.execute()
@@ -69,6 +62,11 @@ project.afterEvaluate {
             process.destroy()
             if (status != 0) {
                 throw new GradleException("generate fastdex runtime dex fail!")
+            }
+
+            project.copy {
+                from outDex
+                into project.rootProject.file('gradle-plugin/src/main/resources')
             }
         }
     }
