--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -9,7 +9,7 @@ buildscript {
         classpath 'com.android.tools.build:gradle:2.2.0'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
         classpath "me.tatarka:gradle-retrolambda:3.6.0"
-        classpath 'com.dx168.fastdex:gradle-plugin:0.1.6'
+        classpath 'com.github.typ0520:gradle-plugin:0.1.7'
     }
 }
 
