--- a/sample/app/build.gradle
+++ b/sample/app/build.gradle
@@ -149,5 +149,13 @@ project.afterEvaluate {
     }
 }
 
-task mytest<< {
+task mytest {
+
+    Task task = project.tasks.first()
+
+
+    println("==${task}")
+
+    println("==${project.gradle.startParameter.taskRequests.get(0).args}")
 }
+
