--- a/fastdex-gradle/build.gradle
+++ b/fastdex-gradle/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'maven'
 dependencies {
     compile gradleApi()
     compile localGroovy()
-    compile project(':build-lib')
+    compile project(':fastdex-build-lib')
     compile 'com.android.tools.build:gradle:2.1.2'
 
     //compile project(':instant-run:instant-run-client')
