--- a/sample/build.gradle
+++ b/sample/build.gradle
@@ -8,8 +8,8 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:2.2.0'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
-        classpath "me.tatarka:gradle-retrolambda:3.6.0"
-        classpath 'com.github.typ0520:gradle-plugin:0.1.7'
+        //classpath "me.tatarka:gradle-retrolambda:3.6.0"
+        classpath 'com.github.typ0520:fastdex-gradle:0.1.7'
     }
 }
 
