--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
-rootProject.name = 'com.github.typ0520'
+rootProject.name = 'com.github.sameland'
 
 include ':fastdex-common'
 include ':fastdex-gradle'
