--- a/fastdex-build-lib/build.gradle
+++ b/fastdex-build-lib/build.gradle
@@ -42,14 +42,14 @@ sourceSets {
 
 task generateVersionConstantsJava {
     inputs.property("version", version)
-    ext.versionFile = new File(generated, "com/github/typ0520/fastdex/Version.java")
+    ext.versionFile = new File(generated, "com/github/sameland/fastdex/Version.java")
     outputs.file(versionFile)
 }
 
 generateVersionConstantsJava << {
     versionFile.parentFile.mkdirs()
     versionFile.text = """
-package com.github.typ0520.fastdex;
+package com.github.sameland.fastdex;
 
 public final class Version {
     private Version() {}
